--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
               <a class="navbar-item" href="index.html">
                 Home
               </a>
-              <a class="navbar-item" href="work.html">
-                Work
-              </a>
+              <a class="navbar-item" href="service.html">
+                Service
+               </a>
               <a class="navbar-item" href="pricing.html">
                 Pricing
               </a>
@@ -131,9 +131,10 @@
                   </div>
                   <p class="footer-heading">Contact Info</p>
                   <div class="subtitle">
-                    +91 079 65555706
-                    <br /> contact@mobiosolutions.com
-                  </div>
+                    <a href="tel:+91-9904929149">+91-9904929149</a>
+                  <br /> 
+                  <a href="mailto:contact@mobiosolutions.com">contact@mobiosolutions.com</a>
+                </div>
                 </div>
                 <div class="column">
                   <div class="footer-link">
