--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               <a class="navbar-item is-active" href="index.html">
                 Home
               </a>
-              <a class="navbar-item" href="work.html">
-                Work
+              <a class="navbar-item" href="service.html">
+               Service
               </a>
               <a class="navbar-item" href="pricing.html">
                 Pricing
@@ -69,7 +69,7 @@
               <h1 class="title title-banner is-1">
                 Grow your better business startup system
               </h1>
-              <h2 class="subtitle">
+              <h2 class="subtitle mb50">
                 Find out the better service by our place and supplies it with the necessary regeli alia. It is a
                 paradis ematic.
               </h2>
@@ -242,16 +242,15 @@
           <div class="title ">
             How We Work for Client?
           </div>
-          <div class="subtitle">
+          <div class="subtitle mb50">
             Find out the better service by our place and supplies it with the necessary regeli alia
           </div>
 
-          <div class="columns">
-
-            <div class="column">
+          <div class="columns mt50">
+             <div class="column">
               <img src="assets/images/researchicon.png" alt="icon">
               <p>Research</p>
-              <div class="subtitle">
+              <div class="subtitle mb50">
                 Ironpaper work embodies the interse to ction of design and marketing
               </div>
             </div>
@@ -263,7 +262,7 @@
               </div>
             </div>
             <div class="column">
-              <img src="assets/images/developmenticon.png" alt="icon">
+              <img class="h-52" src="assets/images/developmenticon.png" alt="icon">
               <p>Development</p>
               <div class="subtitle">
                 We design and build websites to impact sales and lead generation
@@ -325,7 +324,7 @@
                   <p>Basic Plan</p>
                   <div class="plan-price">
                     <div class="currency-active">$40</div>
-                    <div class="month-price-active ">
+                    <div class="month-price ">
                       <span>Per Month</span>
                     </div>
 
@@ -347,7 +346,7 @@
                   <p>Team Plan</p>
                   <div class="plan-price">
                     <div class="currency-active">$140</div>
-                    <div class="month-price-active ">
+                    <div class="month-price ">
                       <span>Per Month</span>
                     </div>
 
@@ -408,7 +407,7 @@
                                     your
                                     outreach efforts.</p>
                                 </div>
-                                <div class="testimonial-name">
+                                <div class="testimonial-name mt30">
                                   <h3>Daniel P. Disua</h3>
                                   <span>Web Developer, EcologyTheme</span>
                                 </div>
@@ -535,12 +534,8 @@
 
             </div>
           </div>
-
-
         </div>
-
       </div>
-
     </div>
   </section>
   <!-- Testimonial Section end -->
@@ -565,11 +560,8 @@
                 <input class="input is-rounded" type="text" placeholder="Enter Email" id="query-eamil">
                 <a class="button is-info is-rounded rnd-btn">Send</a>
               </div>
-
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
@@ -611,15 +603,17 @@
             Get an idea about our work
           </div>
           <div class="subtitle">
-            Websites should be more than pretty brochures. A company website needs
+            <p>Websites should be more than pretty brochures. A company website needs</p>
+            <br/>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+            <br/>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. </p>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- About our work with swiper slider Section end -->
-
-
 
   <!-- Footer Start -->
   <div class="hero-foot">
@@ -640,8 +634,9 @@
             </div>
             <p class="footer-heading">Contact Info</p>
             <div class="subtitle">
-              +91 079 65555706
-              <br /> contact@mobiosolutions.com
+                <a href="tel:+91-9904929149">+91-9904929149</a>
+              <br /> 
+              <a href="mailto:contact@mobiosolutions.com">contact@mobiosolutions.com</a>
             </div>
           </div>
           <div class="column">
@@ -774,23 +769,12 @@
 <script src="assets/js/swiper.min.js"></script>
 <script type="text/javascript" src="assets/js/bulma-carousel.js"></script>
 <!-- Initialize Swiper -->
-<!-- <script>
-  var swiper = new Swiper('.swiper-container', {
-    slidesPerView: 4,
-    spaceBetween: 30,
-    centeredSlides: true,
-    pagination: {
-      el: '.swiper-pagination',
-      clickable: true,
-    },
-  });
-</script> -->
 
 <script>
   var swiper = new Swiper('.swiper-container', {
     slidesPerView: 1.5,
     spaceBetween: 30,
-    loop: true,
+    loop: false,
     pagination: {
       el: '.swiper-pagination',
       clickable: true,
