--- a/pricing.html
+++ b/pricing.html
@@ -37,8 +37,8 @@
                             <a class="navbar-item" href="index.html">
                                 Home
                             </a>
-                            <a class="navbar-item" href="work.html">
-                                Work
+                            <a class="navbar-item" href="service.html">
+                                Service
                             </a>
                             <a class="navbar-item is-active" href="pricing.html">
                                 Pricing
