--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   <link rel="stylesheet" href="assets/css/swiper.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
+  
+<!-- og tag -->
+<meta property="og:title" content="Bulma | Open Source Project ">
+<meta property="og:site_name" content="Business Startup Bulma Theme">
+<meta property="og:url" content="https://mobiosolutions.github.io/ms-business-startup-bulma-theme/">
+<meta property="og:description" content="We are happy to announce that we have successfully created demo of website design using Bulma. Contact us for fastest and responsive web design for your unique business.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://repository-images.githubusercontent.com/187611706/ce4b0680-04b0-11ea-80af-f0e69f65481f">
+
 </head>
 <!-- <div id="pageloader" class="pageloader"><span class="title">Pageloader</span></div> -->
 
